# seocli

./: .gitignore  .seocli-rules.example.yaml  LICENSE  README.md  README.zh.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  seo-audit.yml
docs/: COLLEAGUE.md
prompts/: README.md  claude-code.md  cursor.md  generic-mcp.md
review/: README_EN.md  REVIEW_BOARD_README.md  SKILL.md  install.sh
review/adapters/: claude-code.md  codex.md  hermes.md
review/references/: data-verification-methods.md  document-consistency-checklist.md  document-review-iteration.md  html-prototyping-pattern.md  iterative-review-pattern.md  multi-platform-adapter-pattern.md  prd-template.md  product-doc-checklist.md  scoring-system.md  skill-audit-pattern.md  ui-review-checklist.md
review/roles/: library.md
review/scenarios/: product-review.md  seo-content-review.md  tech-review.md
seocli/: __init__.py  __main__.py  crawl.py  server.py
seocli/core/: formats.py  geo.py  issues.py  js.py  link.py  rate.py  rules.py  seo.py  session.py  sitemap.py
tests/: __init__.py  conftest.py  test_formats.py  test_issues.py  test_rules.py  test_session.py
